tests/snapshots/snapshot_tests__result_string_h.snap
---
source: tests/snapshot_tests.rs
assertion_line: 32
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

int32_t parse_int(const char* s);

/* skipped: format_float — Result<non-primitive,_> return */

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
