tests/snapshots/snapshot_tests__result_string_pxd.snap
---
source: tests/snapshot_tests.rs
assertion_line: 30
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "result_string.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    int c_parse_int "parse_int"(const char* s, char** error_out)

    bytes c_format_float "format_float"(double x, int precision, char** error_out)
