tests/snapshots/snapshot_tests__result_string_pyx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 31
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "result_string.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    int c_parse_int "parse_int"(const char* s, char** error_out)

    bytes c_format_float "format_float"(double x, int precision, char** error_out)


def parse_int(s):
    cdef bytes _s_b = s.encode('utf-8') if s is not None else None
    cdef char* _err = NULL
    cdef int _result = c_parse_int(_s_b if s is not None else NULL, &_err)
    if _err is not NULL:
        msg = _err.decode('utf-8')
        free(_err)
        raise RuntimeError(msg)
    return _result

def format_float(x, precision):
    cdef char* _err = NULL
    cdef bytes _result = c_format_float(x, precision, &_err)
    if _err is not NULL:
        msg = _err.decode('utf-8')
        free(_err)
        raise RuntimeError(msg)
    return _result
