tests/snapshots/snapshot_tests__simple_h.snap
---
source: tests/snapshot_tests.rs
assertion_line: 32
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

int32_t add(int32_t a, int32_t b);

double scale(double x, float factor);

bool is_positive(int64_t x);

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
