tests/snapshots/snapshot_tests__simple_pxd.snap
---
source: tests/snapshot_tests.rs
assertion_line: 30
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "simple.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    int c_add "add"(int a, int b)

    double c_scale "scale"(double x, float factor)

    bint c_is_positive "is_positive"(long long x)
