tests/snapshots/snapshot_tests__simple_pyx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 31
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "simple.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    int c_add "add"(int a, int b)

    double c_scale "scale"(double x, float factor)

    bint c_is_positive "is_positive"(long long x)


def add(a, b) -> int:
    cdef int _result = c_add(a, b)
    return _result

def scale(x, factor) -> float:
    cdef double _result = c_scale(x, factor)
    return _result

def is_positive(x) -> bool:
    cdef bint _result = c_is_positive(x)
    return _result
