tests/snapshots/snapshot_tests__slices_h.snap
---
source: tests/snapshot_tests.rs
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

double sum_slice(const double* data, size_t data_len);

size_t byte_count(const uint8_t* data, size_t data_len);

double describe(const char* name, const double* values, size_t values_len);

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
