tests/snapshots/snapshot_tests__slices_pxd.snap
---
source: tests/snapshot_tests.rs
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "slices.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    double c_sum_slice "sum_slice"(const double* data, size_t data_len)

    int c_byte_count "byte_count"(const int* data, size_t data_len)

    double c_describe "describe"(const char* name, const double* values, size_t values_len)
