tests/snapshots/snapshot_tests__slices_pyx.snap
---
source: tests/snapshot_tests.rs
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "slices.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    double c_sum_slice "sum_slice"(const double* data, size_t data_len)

    int c_byte_count "byte_count"(const int* data, size_t data_len)

    double c_describe "describe"(const char* name, const double* values, size_t values_len)


def sum_slice(data) -> float:
    cdef double[::1] _data_mv = np.asarray(data, dtype=np.float64)
    cdef double _result = c_sum_slice(&_data_mv[0], len(_data_mv))
    return _result

def byte_count(data):
    cdef int[::1] _data_mv = np.asarray(data, dtype=np.uint8)
    cdef int _result = c_byte_count(&_data_mv[0], len(_data_mv))
    return _result

def describe(name, values) -> float:
    cdef bytes _name_b = name.encode('utf-8') if name is not None else None
    cdef double[::1] _values_mv = np.asarray(values, dtype=np.float64)
    cdef double _result = c_describe(_name_b if name is not None else NULL, &_values_mv[0], len(_values_mv))
    return _result
