tests/snapshots/snapshot_tests__strings_h.snap
---
source: tests/snapshot_tests.rs
assertion_line: 32
expression: header
---
#pragma once
#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

/* Auto-generated by rust2cython. Do not edit. */

const char* greet(const char* name);

const char* repeat(const char* s, int32_t n);

size_t byte_length(const char* s);

const char* join_strings(const char** words, size_t words_len);

/* skipped: greet_optional — Option<non-primitive> in param name */

void rust2cython_free_string(char* ptr);
void rust2cython_free_string_array(char** ptr, size_t len);
