tests/snapshots/snapshot_tests__strings_pxd.snap
---
source: tests/snapshot_tests.rs
assertion_line: 30
expression: pxd
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t

cdef extern from "strings.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    const char* c_greet "greet"(const char* name)

    const char* c_repeat "repeat"(const char* s, int n)

    int c_byte_length "byte_length"(const char* s)

    const char* c_join_strings "join_strings"(const char** words, size_t words_len)

    # Note: Rust param/return must use *const <type> (not Option<T> directly)
    const bytes* c_greet_optional "greet_optional"(const char* name)
