tests/snapshots/snapshot_tests__strings_pyx.snap
---
source: tests/snapshot_tests.rs
assertion_line: 31
expression: pyx
---
# Auto-generated by rust2cython. Do not edit.

from libc.stddef cimport size_t
from libc.stdlib cimport free, malloc
import numpy as np

cdef extern from "strings.h":

    void rust2cython_free_string(char* ptr)
    void rust2cython_free_string_array(char** ptr, size_t len)

    const char* c_greet "greet"(const char* name)

    const char* c_repeat "repeat"(const char* s, int n)

    int c_byte_length "byte_length"(const char* s)

    const char* c_join_strings "join_strings"(const char** words, size_t words_len)

    const char* c_greet_optional "greet_optional"(const char* name)


def greet(name):
    cdef bytes _name_b = name.encode('utf-8') if name is not None else None
    # Memory automatically managed — rust2cython_free_string called on return.
    cdef char* _result = c_greet(_name_b if name is not None else NULL)
    try:
        py_str = _result.decode('utf-8')
    finally:
        rust2cython_free_string(_result)
    return py_str

def repeat(s, n):
    cdef bytes _s_b = s.encode('utf-8') if s is not None else None
    # Memory automatically managed — rust2cython_free_string called on return.
    cdef char* _result = c_repeat(_s_b if s is not None else NULL, n)
    try:
        py_str = _result.decode('utf-8')
    finally:
        rust2cython_free_string(_result)
    return py_str

def byte_length(s):
    cdef bytes _s_b = s.encode('utf-8') if s is not None else None
    cdef int _result = c_byte_length(_s_b if s is not None else NULL)
    return _result

def join_strings(words):
    cdef list _words_bytes = [s.encode('utf-8') for s in words]
    cdef const char** _words_arr = <const char**>malloc(len(_words_bytes) * sizeof(char*)) if len(_words_bytes) > 0 else NULL
    cdef size_t _words_idx
    for _words_idx, _words_b in enumerate(_words_bytes):
        _words_arr[_words_idx] = _words_b
    # Memory automatically managed — rust2cython_free_string called on return.
    cdef char* _result = c_join_strings(_words_arr, len(_words_bytes))
    if _words_arr is not NULL:
        free(_words_arr)
    try:
        py_str = _result.decode('utf-8')
    finally:
        rust2cython_free_string(_result)
    return py_str

def greet_optional(name):
    cdef bytes _name_val
    cdef const bytes* _name_ptr
    if name is None:
        _name_ptr = NULL
    else:
        _name_val = name
        _name_ptr = &_name_val
    # Memory automatically managed — rust2cython_free_string called on return.
    cdef char* _result = c_greet_optional(_name_ptr)
    if _result is NULL:
        return None
    try:
        py_str = _result.decode('utf-8')
    finally:
        rust2cython_free_string(_result)
    return py_str
